Work History: Add Meraki and QMAST
Added sections for QMAST Head manager and Meraki
Internship on workhistory.html.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             Volunteering</a></td>
           </tr>
           <tr class = "menurow">
+            <!-- <td><a class="menulink" href="projects.html">Projects</a></td>
+          </tr>
+          <tr class = "menurow"> -->
             <td><a class="menulink" href="certifications.html">Certifications</a></td>
           </tr>
           <tr class = "menurow">
