--- a/workhistory.html
+++ b/workhistory.html
@@ -36,7 +36,52 @@
             <td><a class="menulink" href="connect.html">Connect</a></td>
           </tr>
         </table>
-      </div>
+	  </div>
+	  <div id="body">
+		<table class = "left">
+			<tr>
+				<td>
+					<a href="https://meraki.cisco.com/"><img id="meraki-logo" src="images/meraki.png"></a>
+				</td>
+				<td>
+					<p><b>Embedded Software Engineering Intern – NPI <br>
+					Cisco Meraki</b> - San Francisco <br></p>
+					<ul>
+						<li>Worked with Meraki’s Platform and Hardware teams on firmware for several Linux-kernel 
+							based products (C/C++, Device Tree)</li>
+						<li>Worked effectively on both individual projects and collaboratively on various 2-10 
+							person teams</li>
+						<li>Platform bring up using Yocto and OpenWRT – SoC, PHYs, memory, other peripherals 
+							(Make)</li>
+						<li>Bootloader Development (U-boot)</li>
+						<li>Embedded software for BLE, LTE, GPS communication (C/C++)</li>
+						<li>Built Custom drivers for NPI IoT sensors on Meraki’s new MT product line (C)</li>
+						<li>Worked with vendors such as Qualcomm and Marvell to validate the compatibility of SoCs 
+							for upcoming Meraki Products</li>
+					</ul>
+				</td>
+			</tr>
+		</table>
+	</div>
+	<div id="body">
+		<table class = "left">
+			<tr>
+				<td>
+					<a href="https://www.qmast.ca/"><img id="meraki-logo" src="images/qmast.png"></a>
+				</td>
+				<td>
+					<p><b>Head Manager<br>
+					Queen's Mostly Autonomous Sailboat Team</b> - Kingston <br></p>
+					<ul>
+						<li>Head Manager for the Queen’s Autonomous Sailboat Team, leading three separate 
+							software development teams to design and program a self-driving boat using image 
+							recognition and wind speed / direction detection software.</li>
+						<li>The boat is entered in annual competitions that test navigation, tactics, and design.</li>
+					</ul>
+				</td>
+			</tr>
+		</table>
+	</div>
 	<div id="body">
 		<table class = "left">
 			<tr>
